Updated main text content Fixed layout issue on mobile device

--- a/css/main.css
+++ b/css/main.css
@@ -11,24 +11,57 @@
     height: 500px;
 }
 
-.rg-bottom-layer {
+.rg-layer-title {
+    text-align: center;
+}
+
+/* Footer */
+.rg-footer {
     padding-top: 15px;
-    height: 50px;
     background-color: #333;
     color: #9d9d9d;
 }
 
-.rg-bottom-link {
+.rg-footer-link {
     color: #9d9d9d;
 }
 
-.rg-bottom-link:hover {
+.rg-footer-link:hover {
     color: #ffffff;
     text-decoration: none;
 }
 
-.rg-layer-title {
-    text-align: center;
+.rg-footer hr {
+    width: 95%;
+    display: table;
+    margin: 30px auto;
+    border-top: 2px solid #FFF;
+}
+
+.rg-footer-nav {
+    font-size: 17px;
+    display: table;
+    margin: 15px auto;
+}
+
+.rg-footer-nav > li {
+    display: inline-block;
+    margin-right: 30px;
+}
+
+.rg-footer-copyright-text {
+    font-size: 18px;
+}
+
+@media (max-width: 768px) {
+    .rg-footer-nav {
+        padding-left: 0;
+    }
+    
+    .rg-footer-nav > li {
+        display: table;
+        margin: auto;
+    }
 }
 
 
